_site/sql/hive/src/test/resources/ql/src/test/queries/positive/groupby4.q
FROM src
SELECT substr(src.key,1,1) GROUP BY substr(src.key,1,1)
