_site/sql/hive/src/test/resources/ql/src/test/queries/negative/invalid_select.q
SELECT
  trim(trim(a))
  trim(b)
FROM src;
